# fastapi_sqlmodel

./: .env.example  .gitignore  README.md  pyproject.toml
fastapi_sqlmodel/: app.py
fastapi_sqlmodel/core/: settings.py
fastapi_sqlmodel/database/: database.py
fastapi_sqlmodel/database/models/: event_model.py  user_model.py
fastapi_sqlmodel/database/schemas/: event_schema.py  user_event_link_schema.py  user_schema.py
fastapi_sqlmodel/domains/event/: event_model.py  event_route.py  event_schema.py
fastapi_sqlmodel/domains/user/: user_model.py  user_route.py  user_schema.py
fastapi_sqlmodel/routes/: event_route.py
fastapi_sqlmodel/service/: event_service.py
tests/: test_app.py
